// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.identity.users.personalinfo;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "personal-website-v2/go-apis/identity/users/personalinfo;personalinfo";

// Proto file describing the User's personal info.

// The user's personal info.
message PersonalInfo {
    // The unique ID to identify the personal info.
    uint64 id = 1;

    // The user ID who owns this personal info.
    uint64 user_id = 2;

	// It stores the date and time at which the personal info was created.
    google.protobuf.Timestamp created_at = 3;

	// The user ID to identify the user who created the personal info.
    uint64 created_by = 4;

	// It stores the date and time at which the personal info was updated.
    google.protobuf.Timestamp updated_at = 5;

	// The user ID to identify the user who updated the personal info.
    uint64 updated_by = 6;

	// It indicates whether personal info has been deleted.
    bool is_deleted = 7;

	// Optional. It stores the date and time at which the personal info was deleted.
    google.protobuf.Timestamp deleted_at = 8;

	// Optional. The user ID to identify the user who deleted the personal info.
    google.protobuf.UInt64Value deleted_by = 9;

	// The first name.
    string first_name = 10;

	// The last name.
    string last_name = 11;

	// The display name.
    string display_name = 12;

    // Optional. The user's date of birth.
    google.protobuf.Timestamp birth_date = 13;

	// The user's gender.
    GenderEnum.Gender gender = 14;
}

// Container for enum describing the user's gender.
message GenderEnum {
    // The user's gender.
    enum Gender {
        UNSPECIFIED = 0;
        UNKNOWN = 1;
        FEMALE = 2;
        MALE = 3;
        OTHER = 4;
    }
}
